--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "test": "node test/integration.js"
   },
   "dependencies": {
+    "after": "^0.8.1",
+    "archiver": "^0.14.3",
     "concat-map": "0.0.1",
     "debug": "^2.1.1",
     "dezalgo": "^1.0.1",
+    "format-text": "0.0.3",
     "mkdirp": "^0.5.0",
     "through2": "^0.6.3",
     "tmp": "0.0.24"
