--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y eyed3 ffmpeg zip
 node_js:
   - 'iojs'
   - '0.12'
