--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "node test/*.js"
+    "test": "tap test/*.js"
   },
   "dependencies": {
     "after": "^0.8.1",
@@ -30,6 +30,7 @@
     "musicmetadata": "^0.6.6",
     "rimraf": "^2.2.8",
     "stream-count": "0.0.1",
-    "tape": "^3.5.0"
+    "tape": "^3.5.0",
+    "tap": "^0.6.0"
   }
 }
