--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "format-text": "0.0.3",
     "mkdirp": "^0.5.0",
     "once": "^1.3.1",
+    "readable-stream": "^1.0.33",
+    "run-program": "0.0.5",
     "through2": "^0.6.3",
-    "tmp": "0.0.24",
-    "readable-stream": "^1.0.33"
+    "tmp": "0.0.24"
   },
   "devDependencies": {
     "clone": "^1.0.0",
