--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   },
   "devDependencies": {
     "clone": "^1.0.0",
+    "flac-parser": "^0.3.1",
     "musicmetadata": "^0.6.6",
     "rimraf": "^2.2.8",
     "stream-count": "0.0.1",
-    "tape": "^3.5.0",
-    "tap": "^0.6.0"
+    "tap": "^0.6.0",
+    "tape": "^3.5.0"
   }
 }
